change: use correct spacing

--- a/@navikt/core/css/darkside/alert.darkside.css
+++ b/@navikt/core/css/darkside/alert.darkside.css
@@ -25,12 +25,12 @@
 }
 
 .navds-alert--small {
-  padding: var(--a-spacing-2) var(--a-spacing-4);
-  gap: var(--a-spacing-2);
+  padding: var(--ax-spacing-2) var(--ax-spacing-4);
+  gap: var(--ax-spacing-2);
 
   > .navds-alert__icon {
     margin-block-start: 0;
-    height: var(--a-font-line-height-large);
+    height: var(--ax-font-line-height-large);
   }
 }
 
@@ -94,22 +94,22 @@
 
 .navds-alert--close-button {
   > .navds-alert__wrapper {
-    margin-block-start: var(--a-spacing-05);
+    margin-block-start: var(--ax-spacing-05);
   }
 
   > .-navds-alert__icon {
-    margin-block-start: var(--a-spacing-05);
+    margin-block-start: var(--ax-spacing-05);
   }
 
   &.navds-alert--small {
     align-items: flex-start;
 
     > .navds-alert__wrapper {
-      margin-block-start: var(--a-spacing-1);
+      margin-block-start: var(--ax-spacing-1);
     }
 
     > .navds-alert__icon {
-      margin-block-start: var(--a-spacing-1);
+      margin-block-start: var(--ax-spacing-1);
     }
   }
 }
